<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_common</name>
  <version>2.0.0</version>
  <description>ROS2 Driver for Sensable Phantom Omni haptic device (FireWire version)</description>
  <maintainer email="dongjune.chang@gmail.com">Dongjune Chang</maintainer>
  <license>BSD</license>
  <author>Francisco Suarez-Ruiz (original ROS1)</author>
  <author>Dongjune Chang (ROS2 port)</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>omni_msgs</depend>
  <depend>omni_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

